Closed Bug 550568 Opened 14 years ago Closed 14 years ago

don't hardcode name of default mail application

Categories

(Thunderbird :: OS Integration, defect)

All
Linux
defect
Not set
normal

Tracking

(thunderbird3.1 beta2-fixed)

RESOLVED FIXED
Thunderbird 3.1b2
Tracking Status
thunderbird3.1 --- beta2-fixed

People

(Reporter: chris, Assigned: chris)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; de; rv:1.9.1.8) Gecko/20100225 Iceweasel/3.5.8 (like Firefox/3.5.8)
Build Identifier: 

If you rename Thunderbird and its binaries into somethink other (e.g rebranding in Debian), the check for default mail application appears on every startup. Thunderbid check for the hardcoded string "thunderbird" in gconf settings. So if we replace thunderbird with $(MOZ_APP_NAME) and let the preprocessor transfer this into nsMailGNOMEIntegration.cpp, it works fine.

Reproducible: Always
Comment on attachment 430715 [details] [diff] [review]
replace 'thunderbird' with $(MOZ_APP_NAME)

(In reply to comment #1)
> Created an attachment (id=430715) [details]
> replace 'thunderbird' with $(MOZ_APP_NAME)

In order to get things going you should ask for code review. See https://developer.mozilla.org/en/comm-central#Requirements for more information.
Attachment #430715 - Flags: review?(mkmelin+mozilla)
Assignee: nobody → chris
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Thunderbird 3.1b1
Comment on attachment 430715 [details] [diff] [review]
replace 'thunderbird' with $(MOZ_APP_NAME)

r=mkmelin
Attachment #430715 - Flags: review?(mkmelin+mozilla) → review+
Checked in: http://hg.mozilla.org/comm-central/rev/a150571c82b2
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: Thunderbird 3.1b1 → Thunderbird 3.1b2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: