Bug 550568 don't hardcode name of default mail application. r=mkmelin