mail/components/shell/nsMailGNOMEIntegration.cpp
@@ -94,7 +94,7 @@ nsMailGNOMEIntegration::Init()
                               getter_AddRefs(appPath));
   NS_ENSURE_SUCCESS(rv, rv);
 
-  rv = appPath->AppendNative(NS_LITERAL_CSTRING("thunderbird"));
+  rv = appPath->AppendNative(NS_LITERAL_CSTRING(MOZ_APP_NAME));
   NS_ENSURE_SUCCESS(rv, rv);
 
   rv = appPath->GetNativePath(mAppPath);
